--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Contact Me</h1>
     <hr/>
-<img src="./Assets/Me.png" height="200"/>
+<img src="./Assets/Me.PNG" height="200"/>
 <p>Tel: +9563108769</p>
 <p>Email: vibalkevintan@gmail.com</p>
 <p>Address:</p>
