--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>My Resume</h1>
         <h2>Kevin T. Vibal</h2>
-        <img src="./Assets/Me.PNG" height="200"/>
+        <img src="/Assets/Me.PNG" height="200"/>
         <hr/>
         <h2>Objective</h2>
         <p>To be a great performing, hands on full-stack programmer that can adapt and efficiently do a client's demand and also have fun and evolve myself
